--- a/foodCornerAwait.html
+++ b/foodCornerAwait.html
@@ -1,53 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <script>
-      let stockAvailable = true;
-      const promiseImp1 = (value1, value2, timevalue) => {
-        return new Promise((resolve, reject) => {
-          if (value1) {
-            setTimeout(() => {
-              resolve(document.write(value2,"<br>"));
-            }, timevalue);
-          } else {
-            setTimeout(() => {
-              reject(
-                document.write(
-                  "the process is rejected since the value1 is not correct"
-                )
-              );
-            }, timeValue);
-          }
-        });
-      };
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
 
-      async function promiseCheck() {
-        CustomerName = prompt("WELCOME TO OUR SHOP\nPlease enter your name");
-        menu = prompt(
-          "MENU\n1.Gobi manchurian\n2.Paneer manchurian\n3.Aalo mancurian\n4.Cabbage manchurian"
-        );
-        sauce = prompt("you want sauce").toLowerCase();
-        onions = prompt("you want onions").toLowerCase();
-        chilli = prompt("you want chilli ?").toLowerCase();
+<body>
+  <script>
+    //creating a promise function 
+    const promiseImp1 = (value1, value2, timevalue) => {
+      return new Promise((resolve, reject) => {
+        if (value1) {
+          setTimeout(() => {
+            resolve(document.write(value2, "<br>"));
+          }, timevalue);
+        } else {
+          setTimeout(() => {
+            reject(
+              document.write(
+                "the process is rejected since the value1 is not correct"
+              )
+            );
+          }, timeValue);
+        }
+      });
+    };
 
-        await promiseImp1(true, "Order is placed",100)
-          .then(() => promiseImp1(true, "cutting the veggies", 2000))
-          .then(() => promiseImp1(true, "frying the veggies", 2000))
-          .then(() => promiseImp1(true, "making the sause", 2000))
-          .then(() => promiseImp1(true, "garnishing", 2000))
-          .then(() => promiseImp1(true, "your order is ready to deliver", 2000))
-          .then(() => promiseImp1(true, "thank you for using our service", 2000))
-          .then(() => promiseImp1(true, "HASTA LA VISTA", 2000))
-          
-      }
-      promiseCheck();
-    </script>
-  </body>
+    //checking the shop is open or not
+    let shopOpen = true
+    async function promiseCheck() {
+
+      await promiseImp1(shopOpen, "Hello", 100)
+
+        .then(() => customerName = prompt("WELCOME TO OUR SHOP\nPlease enter your name"))
+        .then(() => menu = prompt(`Hello ${customerName} ,place your order please.\n MENU\n1.Gobi manchurian\n2.Paneer manchurian\n3.Aalo mancurian\n4.Cabbage manchurian`))
+        .then(() => sauce = prompt("you want sauce").toLowerCase())
+        .then(() => onions = prompt("you want onions").toLowerCase())
+        .then(() => chilli = prompt("you want chilli ?").toLowerCase())
+
+        .then(() => promiseImp1(true, "your order is placed", 2000))
+        .then(() => promiseImp1(true, "cutting the veggies", 2000))
+        .then(() => promiseImp1(true, "frying the veggies", 2000))
+        .then(() => promiseImp1(true, "making the sause", 2000))
+        .then(() => promiseImp1(true, "garnishing", 2000))
+        .then(() => promiseImp1(true, "your order is ready to deliver", 2000))
+        .then(() => promiseImp1(true, "thank you for using our service", 2000))
+        .then(() => promiseImp1(true, "HASTA LA VISTA", 2000))
+
+        .catch(() => promiseImp1(true, "SORRY, shop closed. We would like to contact you once our shop opened, kindly provide", 100))
+
+
+
+
+    }
+
+    //calling the function
+
+    promiseCheck();
+
+
+  </script>
+</body>
+
 </html>
